...
        android:layout_height="225dp"
        app:cornerRadius = "15dp"
        app:srcCompat="@drawable/uscid"
        />
        <TextView
...
                        android:onClick="currResOuterToggle"
                        android:clickable="true"
                        android:id="@+id/currresoutertoggle"
                        android:layout_width="14dp"
                        android:layout_height="15dp"
...
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:id = "@+id/currentreservationbox"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="10dp"
...
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/currentreservationtoggle"
                            android:layout_width="14dp"
                            android:layout_height="15dp"
...
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/CurrResName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Taper Hall"
                                android:textStyle="bold"
                                android:gravity="left"
...
                                android:layout_width="280dp"
                                android:orientation="vertical"
                                android:id="@+id/currresinfo"
                                android:visibility="gone"
                                android:layout_height="wrap_content">
...
                                    android:text="Status: Upcoming"
                                    android:textStyle="bold"
                                    android:id="@+id/currresstatus"
                                    android:gravity="left"
                                    android:textSize="12dp"
...
                                    android:fontFamily="@font/dmsans"/>
                                <TextView
                                    android:id="@+id/currrestime"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...
                                <TextView
                                    android:layout_marginBottom="5dp"
                                    android:id="@+id/currreslocation"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...
                                    android:layout_height="wrap_content">
                                    <Button
                                        android:id="@+id/buttonEdit"
                                        style="@style/Button.Purple"
                                        android:layout_width="130dp"
...
                                        android:minWidth="0dp"
                                        android:onClick="editReservation"
                                        android:text="Edit Reservation"
                                        app:cornerRadius="6dp" />
                                    <Button
...

        <ImageView
            android:id="@+id/nav1"
            android:layout_width="205dp"
            android:layout_height="100dp"
...

        <ImageView
            android:id="@+id/nav2"
            android:layout_width="205dp"
            android:layout_height="100dp"
...
