...
    <!--        android:layout_marginTop="-25dp"-->
    <!--        android:gravity="center"-->
    <!--        android:textSize="25dp"-->
    <!--        android:layout_marginRight="5dp"-->
    <!--        android:textStyle="bold"-->
    <!--        android:fontFamily="@font/dmsans"-->
    <!--        android:text="Make Reservation" />-->

    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="40dp"
...
        android:clickable="true"
        android:layout_marginBottom="-10dp"

        app:srcCompat="@drawable/outdoor_long"
        android:onClick="toggle"/>
    <ImageView
        android:id="@+id/week_toggle"
        android:layout_width="170dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:clickable="true"
        app:srcCompat="@drawable/this_week"
        android:onClick="toggle_week"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridLayout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:columnCount="6"
                app:rowCount="25"

                ></androidx.gridlayout.widget.GridLayout>

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridLayout02"
                android:layout_width="match_parent"
...
        android:textColor="@color/design_default_color_error"
        android:textSize="15dp"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/buttonReserve"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:backgroundTint="#8A00C2"
        android:fontFamily="@font/dmsans"
        android:text="Make Reservation"
...
